# drag-rs

./: .gitignore  Cargo.toml  LICENSE.spdx  README.md  SECURITY.md  deny.toml
.cargo/: audit.toml
.changes/: api-result-callback.md  config.json  data-drag-api.md  data-drag.md  drag-as-window-initial-release.md  drag-cursor-position-api.md  drag-cursor-position.md  drag-options.md  es2019.md  fix-missing-dist.md  initial-release.md  result-callback.md  v2.md
.github/workflows/: audit.yml  check.yml  covector-status.yml  covector-version-or-publish.yml
crates/drag/: CHANGELOG.md  Cargo.toml
crates/drag/src/: lib.rs
crates/drag/src/platform_impl/: mod.rs
crates/drag/src/platform_impl/gtk/: mod.rs
crates/drag/src/platform_impl/macos/: mod.rs
crates/drag/src/platform_impl/windows/: image.rs  mod.rs  utils.rs
crates/tauri-plugin/: CHANGELOG.md  Cargo.toml
crates/tauri-plugin-drag/: CHANGELOG.md  Cargo.toml  build.rs
crates/tauri-plugin-drag-as-window/: CHANGELOG.md  Cargo.toml  build.rs
crates/tauri-plugin-drag-as-window/permissions/: default.toml
crates/tauri-plugin-drag-as-window/permissions/autogenerated/: reference.md
crates/tauri-plugin-drag-as-window/permissions/autogenerated/commands/: drag_back.toml  drag_new_window.toml  on_drop.toml
crates/tauri-plugin-drag-as-window/permissions/schemas/: schema.json
crates/tauri-plugin-drag-as-window/src/: api-iife.js  commands.rs  lib.rs
crates/tauri-plugin-drag/permissions/: default.toml
crates/tauri-plugin-drag/permissions/autogenerated/: reference.md
crates/tauri-plugin-drag/permissions/autogenerated/commands/: start_drag.toml
crates/tauri-plugin-drag/permissions/schemas/: schema.json
crates/tauri-plugin-drag/src/: api-iife.js  commands.rs  lib.rs
crates/tauri-plugin/src/: api-iife.js  lib.rs
examples/: wry.rs
examples/tao/: Cargo.toml
examples/tao/src/: main.rs
examples/tauri/: Cargo.toml  html2canvas.min.js  index.html  new_window.html  tauri.conf.json
examples/tauri-dragout/: Cargo.toml  index.html  new_window.html  tauri.conf.json
examples/tauri-dragout/capabilities/: default.json
examples/tauri-dragout/src/: lib.rs  main.rs
examples/tauri/capabilities/: default.json
examples/tauri/src/: lib.rs  main.rs
examples/winit/: Cargo.toml
examples/winit/src/: main.rs
examples/wry/: Cargo.toml  wry.rs
examples/wry-dragout/: Cargo.toml
examples/wry-dragout/src/: main.rs
examples/wry/src/: main.rs
src/: lib.rs
src/platform_impl/gtk/: mod.rs
src/platform_impl/macos/: mod.rs
src/platform_impl/windows/: mod.rs
