[package]
name = "drag"
version = "0.4.0"
description = "Start a drag operation out of a window"
authors = [ "CrabNebula Ltd." ]
edition = { workspace = true }
license = { workspace = true }

[dependencies]
raw-window-handle = "0.6.2"
thiserror.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
tao.workspace = true
winit.workspace = true
wry.workspace = true
tauri.workspace = true

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26.0"
objc = "0.2.7"
core-graphics = "0.24.0"

[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
gtk = { version = "0.18.1", features = [ "v3_20" ] }
gdk = { version = "0.18.0", features = [ "v3_20" ] }
gdkx11 = "0.18.0"

[target."cfg(target_os = \"windows\")".dependencies]
dunce.workspace = true

[target."cfg(target_os = \"windows\")".dependencies.windows]
version = "0.58.0"
features = [
  "implement",
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Ole",
  "Win32_System_Memory",
  "Win32_System_SystemServices",
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Imaging",
  "Win32_Graphics_Gdi"
]

[features]
serde = [ "dep:serde" ]
