[package]
name = "tauri-plugin-drag-as-window"
version = "0.1.1"
authors = [ "CrabNebula Ltd." ]
description = "Start a drag operation from a DOM element to its own window"
edition = "2021"
rust-version = "1.60"
license = { workspace = true }

[dependencies]
tauri = "1"
serde = "1"
serde_json = "1"
thiserror = "1"
drag = { path = "../drag", version = "0.4.0", features = [ "serde" ] }
base64 = "0.21"
tempfile = "3"

[features]
global-js = [ ]
