[package]
name = "tauri-plugin-drag-as-window"
version = "0.1.1"
authors = [ "CrabNebula Ltd." ]
description = "Start a drag operation from a DOM element to its own window"
edition = "2021"
license = { workspace = true }

[dependencies]
tauri.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
drag.workspace = true
base64.workspace = true
tempfile = "3"

[build-dependencies]
tauri-plugin.workspace = true

[features]
global-js = [ ]