[package]
name = "tauri-plugin-drag-as-window"
version = "1.0.0"
authors = [ "CrabNebula Ltd." ]
description = "Start a drag operation from a DOM element to its own window"
edition = "2021"
license = { workspace = true }
links = "tauri-plugin-drag-as-window"

[dependencies]
tauri.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
drag = { path = "../drag", version = "1.0.0", features = [ "serde" ] }
base64.workspace = true
tempfile = "3"

[build-dependencies]
tauri-plugin.workspace = true

[features]
global-js = [ ]
