[package]
name = "tauri-plugin-drag"
version = "0.3.1"
authors = [ "CrabNebula Ltd." ]
description = "Start a drag operation out of a Tauri window"
edition = "2021"
license = { workspace = true }

[dependencies]
tauri.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
drag.workspace = true
base64.workspace = true

[build-dependencies]
tauri-plugin.workspace = true

