[package]
name = "tauri-plugin-drag"
version = "1.0.0"
authors = [ "CrabNebula Ltd." ]
description = "Start a drag operation out of a Tauri window"
edition = "2021"
license = { workspace = true }
links = "tauri-plugin-drag"

[dependencies]
tauri.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
drag = { path = "../drag", version = "1.0.0", features = [ "serde" ] }
base64.workspace = true

[build-dependencies]
tauri-plugin.workspace = true
