[package]
name = "tauri-plugin-drag"
version = "0.2.0"
authors = [ "CrabNebula Ltd." ]
description = "Start a drag operation out of a Tauri window"
edition = "2021"
rust-version = "1.60"
license = { workspace = true }

[dependencies]
tauri = "1"
serde = "1"
serde_json = "1"
thiserror = "1"
drag = { path = "../drag", version = "0.3.0", features = [ "serde" ] }
base64 = "0.21"
